# jenerator

./: .gitignore  LICENSE  README.md  jenerator.cabal  stack.yaml
app/: Main.hs
src/: Jenerator.hs  Lib.hs
src/Jenerator/: IO.hs
test/: Spec.hs
