name:                jenerator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/glesica/jenerator#readme
license:             BSD3
license-file:        LICENSE
author:              George Lesica
maintainer:          george@lesica.com
copyright:           George Lesica
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jenerator
  build-depends:       base >= 4.7 && < 5
                     , cmark
                     , directory
                     , filepath
                     , split
                     , text
  default-language:    Haskell2010

executable jenerate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jenerator
  default-language:    Haskell2010

test-suite jenerator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jenerator
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/glesica/jenerator
